--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "eslint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "eslint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
+    "eslint": "eslint . --ext cjs,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "eslint:fix": "eslint . --ext cjs,ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "stylelint": "stylelint \"**/*.{css,scss}\"",
     "stylelint:fix": "stylelint \"**/*.{css,scss}\" --fix",
     "test": "vitest",
