--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "graphql-codegen:watch": "graphql-codegen --config ./graphql-codegen.ts -w"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.7",
+    "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-router": "0.0.1-beta.211",
     "classnames": "^2.3.2",
     "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@tanstack/react-query-devtools": "^5.8.4",
     "@tanstack/router-devtools": "0.0.1-beta.211",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
