--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-router": "0.0.1-beta.211",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
