--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
