--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "eslint": "eslint . --ext cjs,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "eslint:fix": "eslint . --ext cjs,ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
-    "stylelint": "stylelint \"**/*.{css,scss}\"",
-    "stylelint:fix": "stylelint \"**/*.{css,scss}\" --fix",
+    "stylelint": "stylelint \"**/*.{css,scss}\" --max-warnings 0",
+    "stylelint:fix": "stylelint \"**/*.{css,scss}\" --max-warnings 0 --fix",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
@@ -64,7 +64,9 @@
     "prettier": "^3.1.0",
     "storybook": "^7.5.3",
     "stylelint": "^15.11.0",
+    "stylelint-config-hudochenkov": "^9.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
     "typescript": "^5.2.2",
     "typescript-plugin-css-modules": "^5.0.2",
